  - Increased "lap_number" bar width by 3 characters to fit with additional digits and decimals from estimated total laps reading.

* Misc
  - Added new contributor "sepi" to contributors.md in "Community support" section.

2.33.2 (2025-09-03)
-----------------------------
* Flag Widget
  - [New]Added "yellow_flag_maximum_range_ahead" and "yellow_flag_maximum_range_behind" options (requested by user "Obly88"), which set maximum range for displaying yellow flags that ahead of or behind driver.
    Default range ahead is "500" meters, range behind is "50" meters. To disable yellow flag that behind driver, set range behind to "0".
    Note, yellow flags that ahead of driver take priority over those from behind.
  - Now shows plus and minus sign for nearest yellow flag distance reading. Positive distance reading indicates yellow flag that ahead of driver, negative indicates behind.

* Brake Bias Widget
  - No longer resets baseline bias delta while game is paused (requested by user "matteocnt92"). Baseline bias delta now also resets while vehicle is stationary during formation lap.

* Damage Widget
  - Fixed an issue where aero damage reading sometimes was not updated after impact.

* Speedometer Widget
  - Fixed an issue where minimum and maximum speed could not be reset.

* Stint History Widget
  - No longer resets current stint data while game is paused (requested by user "ebeninca"). Stint history is no longer recorded during formation lap.

* Trailing Widget
  - [New]Added "show_steering" option (requested by user "Badorio"), which shows steering input plot. This option is disabled by default.

* Tyre carcass, Tyre inner layer, Tyre temperature Widget
  - Fixed "enable_heatmap_auto_matching" not working if "show_tyre_compound" option is disabled.

2.33.1 (2025-08-22)
-----------------------------
* [New]Check for Updates